add files to first-draft

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>Ruslan Makeev Calculator</title>
 </head>
 
-</head>
+<body  backgroundcolor="silver">
+  <center><br>
 
-<body>
-  <h1> <em> <u>
-        <b>Calculator</b>
+  <h1> <b> <font color ="black" style = "font-size:65">JS Calculator</font></b></h1>
+  <hr size=20 color ="red">
       </u> </em> </h1>
 
   <div>
@@ -25,6 +25,3 @@
 </footer>
 
 </html>
-
-  
-
