--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <!--- This calculator works NOT using 'eval' command --->
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="calculator.css" type="text/css">
     <title>Calculator v.1.02</title>
 </head>
+
 <body>
     <!--Make a table inside a div for easier sizing. Add working display and all the buttons-->
     <div class="container">
@@ -14,35 +16,36 @@
                 <td colspan="4" id="dataInput">0</td>
             </tr>
             <tr>
-                <td colspan="3"><button onclick="pushBtn(this);">AC</button></td>
-                <td><button onclick="pushBtn(this);">/</button></td>
+                <td colspan="3"><button onclick="pushBtn(this);">=</button></td>
+                <td><button onclick="pushBtn(this);">+</button></td>
             </tr>
             <tr>
                 <td><button onclick="pushBtn(this);">7</button></td>
                 <td><button onclick="pushBtn(this);">8</button></td>
                 <td><button onclick="pushBtn(this);">9</button></td>
-                <td><button onclick="pushBtn(this);">*</button></td>
+                <td><button onclick="pushBtn(this);">-</button></td>
             </tr>
             <tr>
                 <td><button onclick="pushBtn(this);">4</button></td>
                 <td><button onclick="pushBtn(this);">5</button></td>
                 <td><button onclick="pushBtn(this);">6</button></td>
-                <td><button onclick="pushBtn(this);">-</button></td>
+                <td><button onclick="pushBtn(this);">*</button></td>
             </tr>
             <tr>
                 <td><button onclick="pushBtn(this);">1</button></td>
                 <td><button onclick="pushBtn(this);">2</button></td>
                 <td><button onclick="pushBtn(this);">3</button></td>
-                <td><button onclick="pushBtn(this);">+</button></td>
+                <td><button onclick="pushBtn(this);">/</button></td>
             </tr>
             <tr>
                 <td colspan="2"><button onclick="pushBtn(this);">0</button></td>
                 <td><button onclick="pushBtn(this);">.</button></td>
-                <td><button onclick="pushBtn(this);">=</button></td>
+                <td><button onclick="pushBtn(this);">Del</button></td>
             </tr>
         </table>
     </div>
-  <script src="calculator.js"></script>
+    <!--Add JAvascript tag. Better practice to put it at the bottom on an html-->
+    <script src="calculator.js"></script>
 </body>
 
 </html>
