Finally completed the damn thing... Also added burning buttons look - kinda how I feel now =) -

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-<!--- This calculator works NOT using 'eval' command --->
+<!--- This calculator works NOT using 'eval' command =)--->
 
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="calculator.css" type="text/css">
     <title>Calculator v.1.02</title>
 </head>
-
 <body>
     <!--Make a table inside a div for easier sizing. Add working display and all the buttons-->
     <div class="container">
         <table border="1" cellspacing="0">
+            <tr>
+                <td colspan="4"><b>....................CALCULATOR v.1.02..................</b></td>
+            </tr>
             <tr>
                 <td colspan="4" id="dataInput">0</td>
             </tr>
